// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ask users if they want to submit article when user say not found 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "searchedText": "這一篇文章確實是一個轉傳文章，他夠長，看起來很轉傳，但是使用者覺得資料庫裡沒有。",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "0",
    "message": Object {
      "id": "7045918737413",
      "text": "0",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "content": Object {
        "text": "【Submit this message?】
If you think this can be a rumor, please submit it such that other people can help fact-check and clarify.

Though you don't receive the result of fact-checking soon, this is a big help to those who receive similar messages in the future.",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "Please tell us WHY YOU CONSIDER THIS A RUMOR so that we can understand the problem of this suspicious message.",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "n",
                "title": "Discard",
                "type": "postback",
              },
            ],
            "template_type": "button",
            "text": "Discard",
          },
          "type": "template",
        },
      },
      "type": "buttons",
    },
  ],
  "state": "ASKING_ARTICLE_SUBMISSION_REASON",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should block user from submitting articles that is too short 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "searchedText": "這真的假的？？！！！？？！",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "0",
    "message": Object {
      "id": "7045918737413",
      "text": "0",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "content": Object {
        "text": "剛才您傳的訊息資訊量太少，編輯無從查證。
查證範圍請參考📖使用手冊 http://bit.ly/cofacts-fb-users",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article and have OPINIONATED and NOT_ARTICLE replies 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
      "AV8fXikZyCdS-nWhuhfN",
      "AV--LRZYyCdS-nWhujL9",
      "AV8jkRlByCdS-nWhuhiY",
    ],
    "searchedText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
    "selectedArticleId": "AV8d2-YtyCdS-nWhuhdi",
    "selectedArticleText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7045918737413",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "content": Object {
        "text": "1 person(s) consider this to be a rumor ❌
0 person(s) think this can be a truth ⭕
1 person(s) think this is simply personal opinion 💬
2 person(s) thinks it's off-topic and Cofacts need not to handle this message ⚠️️
",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "payload": 1,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[3 users consider this helpful]",
                "title": "老榮民有住所，有月退俸，也不需要特別的醫療護理，因此較適合榮民之家養老，慈濟也一直關懷陪伴。護理之家有免費方案，入住資格和有無捐款沒有關係。
慈善機構使用資源需",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 2,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "💬 OPINIONATED
[No rating for this reply]",
                "title": "慈濟自來有褒有貶，每人有各自的看法。",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 3,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "⚠️️ OFF TOPIC
[No rating for this reply]",
                "title": "整個基督教徒的打手，自己不努力去牧人、募款，利用攻擊別人，三分真七分假，更利用多帳號來造勢及造風向，害我也差點相信了，各位有智慧的看官，看過之後，笑一笑即可，別",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 4,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "⚠️️ OFF TOPIC
[No rating for this reply]",
                "title": "文章是假的 照片也是盜用我方家人的照片,嚴重影響我家人名譽,我方已對po文的人聯絡並打算提出告訴,請勿相信謠言.",
              },
            ],
            "template_type": "generic",
          },
          "type": "template",
        },
      },
      "type": "carousel",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article and slice replies when over 10 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV8fXikZyCdS-nWhuhfN",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--LRZYyCdS-nWhujL9",
      "AV8jkRlByCdS-nWhuhiY",
    ],
    "searchedText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
    "selectedArticleId": "AV8d2-YtyCdS-nWhuhdi",
    "selectedArticleText": "eleven Replies article text",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7045918737413",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "content": Object {
        "text": "6 person(s) consider this to be a rumor ❌
2 person(s) think this can be a truth ⭕
1 person(s) think this is simply personal opinion 💬
2 person(s) thinks it's off-topic and Cofacts need not to handle this message ⚠️️
",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "payload": 1,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[No rating for this reply]",
                "title": "回應1",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 2,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[No rating for this reply]",
                "title": "回應2",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 3,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "⭕ CONTAINS TRUE INFO
[No rating for this reply]",
                "title": "回應3",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 4,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "⭕ CONTAINS TRUE INFO
[No rating for this reply]",
                "title": "回應4",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 5,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[No rating for this reply]",
                "title": "回應5",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 6,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[No rating for this reply]",
                "title": "回應6",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 7,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "💬 OPINIONATED
[No rating for this reply]",
                "title": "回應9",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 8,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[No rating for this reply]",
                "title": "回應10",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 9,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[No rating for this reply]",
                "title": "回應11",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 10,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "⚠️️ OFF TOPIC
[No rating for this reply]",
                "title": "回應7。
",
              },
            ],
            "template_type": "generic",
          },
          "type": "template",
        },
      },
      "type": "carousel",
    },
    Object {
      "content": Object {
        "text": "Please refer to https://cofacts.g0v.tw/article/AV8d2-YtyCdS-nWhuhdi for more replies.",
      },
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article by articleId 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVyyB61NyCdS-nWhuakC",
      "AV4sEcSHyCdS-nWhufEX",
      "5478658696099-rumor",
    ],
    "foundReplyIds": Array [
      "AVygFA0RyCdS-nWhuaXY",
      "AVy6LkWIyCdS-nWhuaqu",
    ],
    "searchedText": "《緊急通知》
台北馬偕醫院傳來訊息：
資深醫生（林清風）傳來：「請大家以後千萬不要再吃生魚片了！」
因為最近已經發現- 好多病人因為吃了生魚片，胃壁附著《海獸胃腺蟲》，大小隻不一定，有的病人甚至胃壁上滿滿都是無法夾出來，驅蟲藥也很難根治，罹患機率每個國家的人都一樣。
尤其；鮭魚的含蟲量最高、最可怕！
請傳給朋友，讓他們有所警惕!",
    "selectedArticleId": "AVyyB61NyCdS-nWhuakC",
    "selectedArticleText": "《緊急通知》
台北馬偕醫院傳來訊息：
資深醫生（林清風）傳來：「請大家以後千萬不要再吃生魚片了！」
因為最近已經發現- 好多病人因為吃了生魚片，胃壁附著《海獸胃腺蟲》，大小隻不一定，有的病人甚至胃壁上滿滿都是無法夾出來，驅蟲藥也很難根治，罹患機率每個國家的人都一樣。
尤其；鮭魚的含蟲量最高、最可怕！
請傳給朋友，讓他們有所警惕!",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "6691804381697",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1505314293406,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1505314295017,
  "replies": Array [
    Object {
      "content": Object {
        "text": "2 person(s) consider this to be a rumor ❌
0 person(s) think this can be a truth ⭕
0 person(s) think this is simply personal opinion 💬
0 person(s) thinks it's off-topic and Cofacts need not to handle this message ⚠️️
",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "payload": 1,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[14 users consider this helpful
2 users consider this not useful]",
                "title": "查證這則謠言的過程中，約翰走鹿也發現其實網路早就有許多解答，就讓約翰走鹿來借花獻佛一下囉。多家媒體都有針對這則「吃生魚片會有海獸胃腺蟲附著胃壁」的謠言請教醫師，",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 2,
                    "title": "Read this reply",
                    "type": "postback",
                  },
                ],
                "subtitle": "❌ CONTAINS MISINFO
[24 users consider this helpful]",
                "title": "過去台灣只有一個海獸胃腺蟲鑽入胃壁的病例，而且僅有一隻蟲。而經查詢，台北馬偕醫院也沒有名為林清風的醫師。",
              },
            ],
            "template_type": "generic",
          },
          "type": "template",
        },
      },
      "type": "carousel",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article with exactly one reply 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV_4WX8vyCdS-nWhujyH",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
    ],
    "searchedText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
    "selectedArticleId": "AV_4WX8vyCdS-nWhujyH",
    "selectedArticleText": "one reply article text",
  },
  "event": Object {
    "input": 1,
    "message": Object {
      "id": "7049700770815",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511702208226,
    "type": "message",
  },
  "isSkipUser": true,
  "issuedAt": 1511702208730,
  "replies": Array [
    Object {
      "content": Object {
        "text": "1 person(s) consider this to be a rumor ❌
0 person(s) think this can be a truth ⭕
0 person(s) think this is simply personal opinion 💬
0 person(s) thinks it's off-topic and Cofacts need not to handle this message ⚠️️
",
      },
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article with no replies 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV_4WX8vyCdS-nWhujyH",
    ],
    "searchedText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
    "selectedArticleId": "AV_4WX8vyCdS-nWhujyH",
    "selectedArticleText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7049700770815",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511702208226,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511702208730,
  "replies": Array [
    Object {
      "content": Object {
        "text": "【Tell us about your concern】
Sorry, no one has replied to this article yet!

If you consider this a rumor, please tell us your concern and why we should figure this out as soon as possible.

",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "Please send us in messages the reason why you consider this a rumor.
",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "n",
                "title": "Skip",
                "type": "postback",
              },
            ],
            "template_type": "button",
            "text": "To skip this, click \\"Skip\\"",
          },
          "type": "template",
        },
      },
      "type": "buttons",
    },
  ],
  "state": "ASKING_REPLY_REQUEST_REASON",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
